<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment2">
    <fragment
        android:id="@+id/loginFragment2"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment2_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment3"
            app:destination="@id/instructionFragment3"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_out_right"
            app:popUpTo="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment3"
        android:name="com.udacity.shoestore.screens.instruction.InstructionFragment"
        android:label="@string/instructions" >
        <action
            android:id="@+id/action_instructionFragment3_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.screens.shoeList.ShoeListFragment"
        android:label="@string/shoe_list"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_out_right"
            app:popUpTo="@id/shoeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.screens.shoeDetails.ShoeDetailFragment"
        android:label="@string/add_new"
        tools:layout="@layout/fragment_shoe_detail" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>